{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 122,
  "lineage": "8a178b86-5432-6758-f40f-bd8e9db92729",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:532000499530:listener/app/lamp-alb/44ab7746243e2711/559b560f369280fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:532000499530:targetgroup/lamp-alb-target/c3edd8889e86b502",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:532000499530:listener/app/lamp-alb/44ab7746243e2711/559b560f369280fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:532000499530:loadbalancer/app/lamp-alb/44ab7746243e2711",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.lamptg",
            "aws_lb.lampalb",
            "aws_security_group.lbsg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lamptg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:532000499530:targetgroup/lamp-alb-target/c3edd8889e86b502",
            "arn_suffix": "targetgroup/lamp-alb-target/c3edd8889e86b502",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:532000499530:targetgroup/lamp-alb-target/c3edd8889e86b502",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lamp-alb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "defaultnacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:network-acl/acl-0f404ef7215fb7096",
            "default_network_acl_id": "acl-0f404ef7215fb7096",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f404ef7215fb7096",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "532000499530",
            "subnet_ids": [
              "subnet-011f47716c1924eb9",
              "subnet-093d81ab622e93f62",
              "subnet-0a0899396a56a5e2f",
              "subnet-0dbaa0a927ffc1327"
            ],
            "tags": {
              "Name": "defaultroute-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "defaultroute-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "defaultroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:route-table/rtb-0689fafc4bdd461df",
            "default_route_table_id": "rtb-0689fafc4bdd461df",
            "id": "rtb-0689fafc4bdd461df",
            "owner_id": "532000499530",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "defaultroute-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "defaultroute-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "defaultsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:security-group/sg-0f05e0087d6da6d17",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f05e0087d6da6d17",
            "ingress": [],
            "name": "default",
            "owner_id": "532000499530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "defaultsg-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "defaultsg-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lampsetup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0889468400f78c6cd",
            "arn": "arn:aws:ec2:us-west-1:532000499530:instance/i-0f40af75d0093fdb6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f40af75d0093fdb6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cefeb6a0a2c16563",
            "private_dns": "ip-172-168-96-152.us-west-1.compute.internal",
            "private_ip": "172.168.96.152",
            "public_ip": "18.144.174.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-1:532000499530:key/7ac38a0d-9f0b-4cae-8cbc-be353bec18d9",
                "tags": {
                  "Name": "rootVolume-0-default",
                  "business_unit": "IT",
                  "company_name": "xyz",
                  "support_email": "abc@xyz.com"
                },
                "throughput": 0,
                "volume_id": "vol-05ebb9aec03f5305e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093d81ab622e93f62",
            "tags": {
              "Name": "Lamp-0-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "Lamp-0-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ee5e2c381362712"
            ]
          },
          "dependencies": [
            "aws_security_group.websg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0889468400f78c6cd",
            "arn": "arn:aws:ec2:us-west-1:532000499530:instance/i-0159f5a24468e3b3c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0159f5a24468e3b3c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-078627baa2dd5f429",
            "private_dns": "ip-172-168-97-229.us-west-1.compute.internal",
            "private_ip": "172.168.97.229",
            "public_ip": "54.153.63.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-1:532000499530:key/7ac38a0d-9f0b-4cae-8cbc-be353bec18d9",
                "tags": {
                  "Name": "rootVolume-1-default",
                  "business_unit": "IT",
                  "company_name": "xyz",
                  "support_email": "abc@xyz.com"
                },
                "throughput": 0,
                "volume_id": "vol-0d603810162894416",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0899396a56a5e2f",
            "tags": {
              "Name": "Lamp-1-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "Lamp-1-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ee5e2c381362712"
            ]
          },
          "dependencies": [
            "aws_security_group.websg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:internet-gateway/igw-0f0f9f81c451ed925",
            "id": "igw-0f0f9f81c451ed925",
            "owner_id": "532000499530",
            "tags": {
              "Name": "ig-lamp-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "ig-lamp-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lampalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:532000499530:loadbalancer/app/lamp-alb/44ab7746243e2711",
            "arn_suffix": "app/lamp-alb/44ab7746243e2711",
            "dns_name": "lamp-alb-1980527316.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:532000499530:loadbalancer/app/lamp-alb/44ab7746243e2711",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lamp-alb",
            "security_groups": [
              "sg-0999f9ea11c7c6b54"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-093d81ab622e93f62"
              },
              {
                "subnet_id": "subnet-0a0899396a56a5e2f"
              }
            ],
            "subnets": [
              "subnet-093d81ab622e93f62",
              "subnet-0a0899396a56a5e2f"
            ],
            "tags": {
              "Name": "alb-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "alb-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "vpc_id": "vpc-0bab791537a8ac75a",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.lbsg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ipattachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:532000499530:targetgroup/lamp-alb-target/c3edd8889e86b502-20220118163611564500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:532000499530:targetgroup/lamp-alb-target/c3edd8889e86b502",
            "target_id": "i-0f40af75d0093fdb6"
          },
          "dependencies": [
            "aws_alb_target_group.lamptg",
            "aws_instance.lampsetup",
            "aws_security_group.websg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:532000499530:targetgroup/lamp-alb-target/c3edd8889e86b502-20220118163611512800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:532000499530:targetgroup/lamp-alb-target/c3edd8889e86b502",
            "target_id": "i-0159f5a24468e3b3c"
          },
          "dependencies": [
            "aws_alb_target_group.lamptg",
            "aws_instance.lampsetup",
            "aws_security_group.websg",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f0f9f81c451ed925",
            "id": "r-rtb-008a1a3d1c51747ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008a1a3d1c51747ef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.webroute",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dbroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:route-table/rtb-06812aca1ca09d641",
            "id": "rtb-06812aca1ca09d641",
            "owner_id": "532000499530",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dbroute-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "dbroute-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:route-table/rtb-008a1a3d1c51747ef",
            "id": "rtb-008a1a3d1c51747ef",
            "owner_id": "532000499530",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "webroute-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "webroute-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_db_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04756521ba195801c",
            "route_table_id": "rtb-06812aca1ca09d641",
            "subnet_id": "subnet-011f47716c1924eb9"
          },
          "dependencies": [
            "aws_route_table.dbroute",
            "aws_subnet.dbsubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08575da6f6c3ae743",
            "route_table_id": "rtb-06812aca1ca09d641",
            "subnet_id": "subnet-0dbaa0a927ffc1327"
          },
          "dependencies": [
            "aws_route_table.dbroute",
            "aws_subnet.dbsubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_web_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8a02a21e893f120",
            "route_table_id": "rtb-008a1a3d1c51747ef",
            "subnet_id": "subnet-093d81ab622e93f62"
          },
          "dependencies": [
            "aws_route_table.webroute",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa0b28a007f2d7e0",
            "route_table_id": "rtb-008a1a3d1c51747ef",
            "subnet_id": "subnet-0a0899396a56a5e2f"
          },
          "dependencies": [
            "aws_route_table.webroute",
            "aws_subnet.websubnets",
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:security-group/sg-0f3d69f56070f4b8d",
            "description": "controls access to the LB",
            "egress": [],
            "id": "sg-0f3d69f56070f4b8d",
            "ingress": [],
            "name": "dbsg-default",
            "name_prefix": "",
            "owner_id": "532000499530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dbsg-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "dbsg-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:security-group/sg-0999f9ea11c7c6b54",
            "description": "controls access to the LB",
            "egress": [],
            "id": "sg-0999f9ea11c7c6b54",
            "ingress": [],
            "name": "lbsg-default",
            "name_prefix": "",
            "owner_id": "532000499530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lbsg-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "lbsg-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:security-group/sg-05ee5e2c381362712",
            "description": "controls access to the LB",
            "egress": [],
            "id": "sg-05ee5e2c381362712",
            "ingress": [],
            "name": "websg-default",
            "name_prefix": "",
            "owner_id": "532000499530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "websg-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "websg-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2739742104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f3d69f56070f4b8d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dbsg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "debuglaptop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-362541107",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ee5e2c381362712",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3136368318",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-05ee5e2c381362712",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2889425846",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0999f9ea11c7c6b54",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lbsg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_to_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-4163483092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ee5e2c381362712",
            "self": false,
            "source_security_group_id": "sg-0999f9ea11c7c6b54",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lbsg",
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2735844742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ee5e2c381362712",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4212535408",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05ee5e2c381362712",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-4243516840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f3d69f56070f4b8d",
            "self": false,
            "source_security_group_id": "sg-05ee5e2c381362712",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dbsg",
            "aws_security_group.websg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_to_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2209193192",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0999f9ea11c7c6b54",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lbsg",
            "aws_vpc.lamp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:subnet/subnet-011f47716c1924eb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.168.98.0/24",
            "id": "subnet-011f47716c1924eb9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "532000499530",
            "tags": {
              "Name": "db-subnet-0-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "db-subnet-0-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:subnet/subnet-0dbaa0a927ffc1327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.168.99.0/24",
            "id": "subnet-0dbaa0a927ffc1327",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "532000499530",
            "tags": {
              "Name": "db-subnet-1-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "db-subnet-1-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "websubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:subnet/subnet-093d81ab622e93f62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.168.96.0/24",
            "id": "subnet-093d81ab622e93f62",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "532000499530",
            "tags": {
              "Name": "web-subnet-0-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "web-subnet-0-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:subnet/subnet-0a0899396a56a5e2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.168.97.0/24",
            "id": "subnet-0a0899396a56a5e2f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "532000499530",
            "tags": {
              "Name": "web-subnet-1-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "web-subnet-1-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "vpc_id": "vpc-0bab791537a8ac75a"
          },
          "dependencies": [
            "aws_vpc.lamp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lamp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:532000499530:vpc/vpc-0bab791537a8ac75a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.96.0/22",
            "default_network_acl_id": "acl-0f404ef7215fb7096",
            "default_route_table_id": "rtb-0689fafc4bdd461df",
            "default_security_group_id": "sg-0f05e0087d6da6d17",
            "dhcp_options_id": "dopt-4c6b812a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bab791537a8ac75a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0689fafc4bdd461df",
            "owner_id": "532000499530",
            "tags": {
              "Name": "lamp-vpc-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            },
            "tags_all": {
              "Name": "lamp-vpc-default",
              "business_unit": "IT",
              "company_name": "xyz",
              "support_email": "abc@xyz.com"
            }
          }
        }
      ]
    }
  ]
}